auth controller complited
